# fine-tuning-LLM

./: .gitignore  CCTA.ipynb  CCTA_pipeline_presentation.ipynb  README.md  main.ipynb  med-segmentation.ipynb  pyproject.toml
presentations_25feb/: CCTA.ipynb  CCTA_2d.ipynb  CCTA_3d.ipynb  CCTA_pipeline_presentation.ipynb  MPI_CMR.ipynb  explore_DICOM.ipynb  med-segmentation.ipynb
