[tool.poetry]
name = "fine-tuning-llm"
version = "0.1.0"
description = ""
authors = ["samhubs <sameersharma.dc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
torch = "^2.6.0"
torchvision = "^0.21.0"
numpy = "^2.2.2"
transformers = "^4.48.3"
peft = "^0.14.0"
datasets = "^3.2.0"
accelerate = "^1.3.0"
matplotlib = "^3.10.0"
scikit-learn = "^1.6.1"
opencv-python = "^4.11.0.86"
scikit-image = "^0.25.2"
pydicom = "^3.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
